--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#b2ebf2</color>
+
+    <color name="primaryLightColor">#e5ffff</color>
+
+    <color name="primaryDarkColor">#81b9bf</color>
+
+    <color name="primaryTextColor">#000000</color>
 </resources>
