minor issues fixed

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,6 @@
             app:destination="@id/listFragment" />
         <argument
             android:name="pokemonDetails"
-            app:argType="com.example.poke2.poke2.model.Pokemon" />
+            app:argType="com.example.poke.model.Pokemon" />
     </fragment>
 </navigation>
