--- a/app/src/main/res/menu/action_bar_options_menu.xml
+++ b/app/src/main/res/menu/action_bar_options_menu.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/options_menu_favoutites"
+        android:title="@string/favourites"
+        />
+    <item
         android:id="@+id/app_bar_search"
         android:icon="@android:drawable/ic_menu_search"
         app:actionViewClass="android.widget.SearchView"
