Progress bar issue fixed. minor adjustments-> complete

--- a/app/src/main/res/menu/action_bar_options_menu.xml
+++ b/app/src/main/res/menu/action_bar_options_menu.xml
@@ -4,14 +4,13 @@
 
     <item
         android:id="@+id/options_menu_favoutites"
-        android:title="@string/favourites"
-        />
+        android:title="@string/favourites" />
     <item
         android:id="@+id/app_bar_search"
         android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/options_menu_search"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always"
-        android:title="@string/options_menu_search" />
+        app:showAsAction="always" />
 
 
 </menu>
