--- a/app/src/main/res/layout/item_view_favourites.xml
+++ b/app/src/main/res/layout/item_view_favourites.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/item_view_favourites"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_view_favourites"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
     android:layout_marginStart="20dp"
+    android:layout_marginTop="10dp"
     android:layout_marginEnd="20dp"
     android:background="@drawable/background_pokemon_item">
 
